# coresets-bench

./: .gitignore  .gitmodules  README.md  conda-env.yml  install_prerequisites.sh  pyproject.toml
bico/: quickstart.cpp
calculatecosts/: calculatecosts.c  featuretools.c
data/input/: USCensus1990.data.txt-svd-d10-running-time.txt  USCensus1990.data.txt-svd-d20-running-time.txt  USCensus1990.data.txt-svd-d30-running-time.txt  USCensus1990.data.txt-svd-d40-running-time.txt  (+16 more)
gs/: CMakeLists.txt
gs/source/: main.cpp
kmeans/: main.cc
pynb/: 01-inspect-coresets.ipynb  02-preliminary-results.ipynb  03-results-distortions.ipynb  04-results-2k.ipynb  05-generate-benchmark.ipynb  05-preliminary-results-with-enron.ipynb  06-generate-benchmark.ipynb  07-results-low-d.ipynb  08-figures-random-projection.ipynb  09-results-benchmark.ipynb  10-svd.ipynb  11-combined-results.ipynb  12-mass-of-pca.ipynb  13-cost-of-coreset-centers.ipynb  14-cost-curves.ipynb  15-ray-maker-visualisations.ipynb  16-benchmark-costs.ipynb  17-generate-benchmark-v2.ipynb  18-ray-maker-visualisations-take-2.ipynb  19-svd-enron.ipynb  19-svd-nytimes.ipynb  20-pca-explained-variance.ipynb  22-svd-enron-sketched.ipynb  23-svd-nytimes-rp.ipynb  24-benchmark-evaluation.ipynb  25-skadi-results.ipynb  26-arbitrary-clusterings.ipynb  27-updated-results.ipynb  28-random-points-with-convex-hull.ipynb  29-linear-program-with-pulp.ipynb  30-linear-program-with-pulp-part-2.ipynb
rp/: Makefile  main.cpp  matrices.h  parsers.h  sketch.c  sketch.cpp  sketches.h
xrun/: calc_costs.py  eval_benchmark.py  gen.py  go.py
(+35 files in other folders)
